[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot_db_manager/assets/fnt/roboto_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/godot_db_manager/dlgs/new_db_dlg.gd" type="Script" id=2]
[ext_resource path="res://addons/godot_db_manager/assets/fnt/roboto_12.tres" type="DynamicFont" id=3]

[node name="new_db_dlg" type="WindowDialog"]
visible = true
anchor_right = 0.257
anchor_bottom = 0.1
margin_right = 0.799988
focus_next = NodePath("v_layout/db_info/db_edt")
focus_mode = 2
custom_fonts/title_font = ExtResource( 1 )
popup_exclusive = true
window_title = "New database (max 16 characters)"
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 90.0781 ],
"_edit_use_anchors_": false
}

[node name="v_layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="db_info" type="HBoxContainer" parent="v_layout"]
margin_top = 11.0
margin_right = 412.0
margin_bottom = 38.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="db_lbl" type="Label" parent="v_layout/db_info"]
margin_left = 18.0
margin_top = 5.0
margin_right = 89.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 1 )
text = "DB name:    "

[node name="db_edt" type="LineEdit" parent="v_layout/db_info"]
margin_left = 93.0
margin_right = 393.0
margin_bottom = 27.0
rect_min_size = Vector2( 300, 20 )
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="buttons" type="HBoxContainer" parent="v_layout"]
margin_top = 58.0
margin_right = 412.0
margin_bottom = 79.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok_btn" type="Button" parent="v_layout/buttons"]
margin_left = 66.0
margin_right = 166.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
text = "OK"

[node name="cancel_btn" type="Button" parent="v_layout/buttons"]
margin_left = 246.0
margin_right = 346.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
text = "Cancel"
